--- a/app/templates/bmc/css/pages/services.css
+++ b/app/templates/bmc/css/pages/services.css
@@ -30,7 +30,7 @@
 }
 
 .service-header {
-  grid-column: col / span 4;
+  grid-column: col/span 4;
   grid-row: row;
   background: url("/app/site/media/images/jeff-sheldon-3231.jpg");
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url("/app/site/media/images/jeff-sheldon-3231.jpg");
@@ -54,12 +54,12 @@
 .services {
   display: flex;
   flex-wrap: wrap;
-  grid-column: col / span 4;
+  grid-column: col/span 4;
   grid-row: row 2;
-  padding: 2.5em;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-gap: 10px;
+  padding: 2.5em;
 }
 
 .service {
@@ -76,17 +76,15 @@
 #one {
   display: flex;
   flex-wrap: wrap;
-  grid-column: col / span 4;
+  grid-column: col/span 4;
   grid-row: row 3;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
 }
 
 #one .community {
   width: 100%;
-  grid-column: 1 / span 3;
-  grid-row: 1;
+  grid-column: 1/span 3;
   background-color: #84bf41;
   color: #fff;
   text-align: center;
@@ -97,87 +95,28 @@
   color: #fff;
 }
 
-#one .community a {
-  color: #fff;
-}
-
-#one .module-community {
-  display: flex;
-  flex-wrap: wrap;
-  grid-column: 1 / span 4;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 20rem;
-}
-
-#one .module-community .group {
-  flex: 1 1 20rem;
-  height: 15rem;
-  position: relative;
-}
-
-#one .module-community .group .group-img {
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  overflow: hidden;
-}
-
-#one .module-community .group .group-img img {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#one .module-community .group .group-img::after {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: 0;
-  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
-  height: 200px;
-  width: 100%;
-}
-
-#one .module-community .group .group-tag {
-  position: absolute;
-  bottom: 50px;
+#one .community .link {
   text-transform: uppercase;
-  font-weight: bold;
-  font-size: 11px;
-  padding: 5px 10px;
-  background-color: #84bf41;
 }
 
-#one .module-community .group .group-tag a {
+#one .community .link a {
+  padding: .25em .75em;
+  border: 1px solid #fff;
+  color: #fff !important;
+}
+
+#one .community .link a:active {
   color: #fff;
 }
 
-#one .module-community .group .group-description {
-  position: absolute;
-  bottom: 0;
-  padding: 10px;
-}
-
-#one .module-community .group .group-description a {
-  display: block;
-  /* Fallback for non-webkit */
-  display: -webkit-box;
-  height: 2em;
-  /* Fallback for non-webkit */
-  margin: 0 auto;
-  font-size: 1em;
-  line-height: 1;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+#one .community .link a:visited {
   color: #fff;
 }
 
 #two {
   display: flex;
-  grid-column: col / span 4;
+  flex-wrap: nowrap;
+  grid-column: col/span 4;
   grid-row: row 4;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -215,7 +154,7 @@
 
 #three .workshop {
   width: 50%;
-  grid-column: 3 / span 2;
+  grid-column: 3/span 2;
   padding: 2.5em;
   align-self: center;
 }
@@ -235,7 +174,8 @@
 
 #four {
   display: flex;
-  grid-column: col / span 4;
+  flex-wrap: nowrap;
+  grid-column: col/span 4;
   grid-row: row 6;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
