--- a/app/templates/bmc/css/pages/services.scss
+++ b/app/templates/bmc/css/pages/services.scss
@@ -1,77 +1,8 @@
-//Color variables
-$green: #84bf41;
-$dark-blue: #222b37;
-// $dark-blue: #2E2D4D;
-$teal: #007991;
-$pink: #cb48b7;
-$med-blue: #5f5980;
-$light-gray: #F1F2F2;
-$orange: #cca231;
-$black: #000;
-$white: #fff;
+@import 'variables.scss';
+@import 'mixins.scss';
 
-//Mixins
-@mixin buttons($color) {
-  a {
-    padding: .25em .75em;
-    border: 1px solid $color;
-    &:active {
-      color: $color;
-    }
-    &:visited {
-      color: $color;
-    }
-    &:hover {
-      background-color: $dark-blue;
-      color: $white;
-      border: none;
-    }
-  }
-}
-//Mixins for showcase module
-@mixin showcase-header($font-size, $line-height, $lines-to-show) {
-  display: block; /* Fallback for non-webkit */
-  display: -webkit-box;
-  height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
-  margin: 0 auto;
-  font-size: $font-size;
-  line-height: $line-height;
-  -webkit-line-clamp: $lines-to-show;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  color: $white;
-}
-@mixin showcase-tag($background-color, $link-color) {
-  position: absolute;
-  bottom: 50px;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 11px;
-  padding: 5px 10px;
-  background-color: $background-color;
-  a {
-    color: $link-color;
-  }
-}
-@mixin image-gradient {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: 0;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 100%);
-  height: 200px;
-  width: 100%;
-}
-// .group-php-page {
-//   display: grid;
-//   grid-template-columns: repeat(4, [col] 1fr);
-//   grid-template-rows: repeat(4, [row] auto);
-// }
 .contentpaneopen {
-  display: grid;
-  grid-template-columns: repeat(4, [col] 1fr);
-  grid-template-rows: repeat(6, [row] minmax(22rem, auto));
+  @include grid-template(repeat(4, [col] 1fr), repeat(6, [row] minmax(22rem, auto)));
   p:first-child {
     margin: 0;
   }
@@ -95,13 +26,8 @@ $white: #fff;
 
 //Header
 .service-header {
-  grid-column: col / span 4;
-  grid-row: row;
-  background: url('/app/site/media/images/jeff-sheldon-3231.jpg');
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%), url('/app/site/media/images/jeff-sheldon-3231.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  @include grid(col / span 4, row);
+  @include bcg-img('/app/site/media/images/jeff-sheldon-3231.jpg');
   background-color: $black;
   color: $white;
   text-align: center;
@@ -116,14 +42,10 @@ $white: #fff;
 
 //Services
 .services {
-  display: flex;
-  flex-wrap: wrap;
-  grid-column: col / span 4;
-  grid-row: row 2;
+  @include flexbox(wrap);
+  @include grid(col / span 4, row 2);
+  @include grid-template(repeat(auto-fit, minmax(260px, 1fr)), null, 10px);
   padding: 2.5em;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  grid-gap: 10px;
 }
 .service {
   flex: 1 1 250px;
@@ -137,17 +59,12 @@ $white: #fff;
 
 //Community Building
 #one {
-  display: flex;
-  flex-wrap: wrap;
-  grid-column: col / span 4;
-  grid-row: row 3;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  @include flexbox(wrap);
+  @include grid(col / span 4, row 3);
+  @include grid-template(repeat(3, 1fr), null);
   .community {
     width: 100%;
-    grid-column: 1 / span 3;
-    grid-row: 1;
+    @include grid(1 / span 3, null);
     background-color: $green;
     color: $white;
     text-align: center;
@@ -155,57 +72,17 @@ $white: #fff;
     h2 {
       color: $white;
     }
-    a {
-      color: $white;
-    }
-  }
-  .module-community {
-    display: flex;
-    flex-wrap: wrap;
-    grid-column: 1 / span 4;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 20rem;
-    .group {
-      flex: 1 1 20rem;
-      height: 15rem;
-      position: relative;
-      .group-img {
-        height: 100%;
-        width: 100%;
-        text-align: center;
-        overflow: hidden;
-        img {
-          position: relative;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-      }
-      .group-img::after {
-        @include image-gradient;
-      }
-      .group-tag {
-        @include showcase-tag($green, $white);
-      }
-      .group-description {
-        position: absolute;
-        bottom: 0;
-        padding: 10px;
-        a {
-          @include showcase-header(1em, 1, 2);
-        }
-      }
+    .link {
+      @include buttons($white);
     }
   }
 }
 
 //Run a FMN
 #two {
-  display: flex;
-  grid-column: col / span 4;
-  grid-row: row 4;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  @include flexbox;
+  @include grid(col / span 4, row 4);
+  @include grid-template(repeat(2, 1fr), null);
   background-color: $teal;
   color: $white;
   .mentor {
@@ -236,7 +113,7 @@ $white: #fff;
   color: $white;
   .workshop {
     width: 50%;
-    grid-column: 3 / span 2;
+    @include grid(3 / span 2, null);
     padding: 2.5em;
     align-self: center;
     h2 {
@@ -255,11 +132,9 @@ $white: #fff;
 
 //Curate Your Own Resources
 #four {
-  display: flex;
-  grid-column: col / span 4;
-  grid-row: row 6;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  @include flexbox;
+  @include grid(col / span 4, row 6);
+  @include grid-template(repeat(2, 1fr), null);
   background-color: $dark-blue;
   color: $white;
   .big {
